--- a/SportStore/SportStore/SportStore.csproj
+++ b/SportStore/SportStore/SportStore.csproj
@@ -16,4 +16,8 @@
     <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
