Add Identity DB and context

--- a/SportStore/SportStore/appsettings.json
+++ b/SportStore/SportStore/appsettings.json
@@ -9,7 +9,10 @@
   "AllowedHosts": "*",
   "Data": {
     "SportStoreProducts": {
-      "ConnectionString" : "Server=(localdb)\\MSSQLLocalDB;Database=SportStore;Trusted_Connection=True;MultipleActiveResultSets=True"
+      "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=SportStore;Trusted_Connection=True;MultipleActiveResultSets=True"
+    },
+    "SportStoreIdentity": {
+      "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=Identity;Trusted_Connection=True;MultipleActiveResultSets=True"
     }
   }
 }
